# as-you-wish

./: .gitignore  .replit  Makefile  README.md  config.ini  make.bat  pyproject.toml
.github/workflows/: build-docs.yml
as_you_wish/: __init__.py  asyouwish.py
docs_src/: api.rst  conf.py  index.rst  quickstart.rst
tests/: test_as_you_wish.py
