[tool.poetry]
name = "as-you-wish"
version = "0.1.0"
description = "A simple python configuration lib."
authors = ["Lochnessdragon <39635811+lochnessdragon@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "as_you_wish"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"