[tool.poetry]
name = "as-you-wish"
version = "0.1.0"
description = "A simple python configuration lib."
authors = ["Lochnessdragon <39635811+lochnessdragon@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "as_you_wish"}]
license = "MIT"
homepage = "https://github.com/lochnessdragon/as-you-wish"
repository = "https://github.com/lochnessdragon/as-you-wish"
keywords = ["config", "ini"]
classifiers = ["Environment :: Web Environment", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
replit = "^3.2.4"
pytest = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"